--- a/framework/widget/config/widget.properties
+++ b/framework/widget/config/widget.properties
@@ -26,6 +26,9 @@ widget.verbose=true
 # Default number of items to be displayed per page in a list form
 widget.form.defaultViewSize=20
 
+# Default text find field's option
+widget.form.defaultTextFindOption=contains
+
 # Controls the initial results display in Find screens. If set to Y, the
 # search result list will be populated when the Find screen first appears.
 # If set to N, the search result list will be empty when the Find screen
