Handle runtime/tempfiles not existing; it's an empty folder, so some revision control systems don't handle that case, and never create it.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@835074 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/build.xml
+++ b/framework/build.xml
@@ -118,7 +118,7 @@ under the License.
 
     <target name="clean-tempfiles">
         <delete verbose="on">
-            <fileset dir="../runtime/tempfiles" includes="**/*"/>
+            <fileset dir="../runtime" includes="tempfiles/**/*"/>
         </delete>
     </target>
 
