Start of new sql parsing code.  Not completely tested.  It *does* parse a test SELECT; what is not tested is actually running the built DynamicViewEntity.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@835637 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/entity/build.xml
+++ b/framework/entity/build.xml
@@ -38,6 +38,10 @@ under the License.
         <fileset dir="../base/lib/scripting" includes="*.jar"/>
         <fileset dir="../base/build/lib" includes="*.jar"/>
     </path>
+    <path id="src-path">
+        <pathelement location="build/gen-src/javacc"/>
+        <pathelement location="build/gen-src/jjtree"/>
+    </path>
 
     <patternset id="src.exc.set">
         <exclude name="org/ofbiz/entity/connection/XaPoolConnectionFactory.java"/>
@@ -48,7 +52,11 @@ under the License.
     <!-- Compilation of the source files                                                                                                                         -->
     <!-- ================================================================== -->
 
-    <target name="classes" depends="prepare">
+    <target name="gen-src">
+        <ofbiz-jjtree dir="org/ofbiz/entity/sql" file="Parser"/>
+    </target>
+
+    <target name="classes" depends="prepare,gen-src">
         <javac15/>
     </target>
 
