No longer use jjtree to implement parsing.  As a consequence of this, SQLSelect no longer depended on Parser, so javac wouldn't compile the generated code.  SQLUtil was added to deal with this(this class will get more helpers later).
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@835741 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/entity/build.xml
+++ b/framework/entity/build.xml
@@ -53,7 +53,7 @@ under the License.
     <!-- ================================================================== -->
 
     <target name="gen-src">
-        <ofbiz-jjtree dir="org/ofbiz/entity/sql" file="Parser"/>
+        <ofbiz-javacc dir="org/ofbiz/entity/sql" file="Parser"/>
     </target>
 
     <target name="classes" depends="prepare,gen-src">
