Very large update.  SQL parser is fairly generic now.  Can parse sql that is compatible with features used by ofbiz.  Has support for DELETE, INSERT, INSERT SELECT, SELECT, UPDATE, and VIEW.
Modified the delegator side of the above to handle the new
interfaces.  Now supports complex alias.  Only SELECT is supported,
and the parseCondition code is disabled for the time being.

The plan(sic) here is to obviously support the other sql statements.
Then, to have a jdbc wrapper around all this, so external tools, that
only know how to talk jdbc, can actually talk directly to the
delegator.

Plus, many more people can understand sql syntax.  This allows them
to do things with ofbiz, that they would find much more difficult if
they had to write <view-entity> definitions.


git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@880835 13f79535-47bb-0310-9956-ffa450edef68

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ framework/jetty/build/
 framework/minilang/build/
 framework/security/build/
 framework/service/build/
+framework/sql/build/
 framework/start/build/
 framework/testtools/build/
 framework/webapp/build/
