Ignore the Var dir.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@880920 13f79535-47bb-0310-9956-ffa450edef68

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ framework/start/build/
 framework/testtools/build/
 framework/webapp/build/
 framework/webslinger/build/
+framework/webslinger/websites/webslinger/Var/
 framework/webtools/build/
 framework/widget/build/
 specialpurpose/assetmaint/build/
