--- a/.classpath
+++ b/.classpath
@@ -141,6 +141,9 @@
     <classpathentry kind="lib" path="framework/base/lib/jpim-0.1.jar"/>
     <classpathentry kind="lib" path="framework/base/lib/freemarker-2.3.15.jar"/>
     <classpathentry kind="lib" path="framework/base/lib/owasp-esapi-full-java-1.4.jar"/>
+    <classpathentry kind="lib" path="framework/base/lib/httpcore-4.0.1.jar"/>
+    <classpathentry kind="lib" path="framework/base/lib/httpclient-4.0.jar"/>
+    <classpathentry kind="lib" path="framework/base/lib/jcip-annotations-1.0.jar"/>    
     <classpathentry kind="lib" path="framework/webapp/lib/json-lib-2.2.3-jdk15.jar"/>
     <classpathentry kind="lib" path="framework/webapp/lib/ezmorph-0.9.1.jar"/>
     <classpathentry kind="lib" path="specialpurpose/pos/lib/looks-2.0.2.jar"/>
