A patch from Erwan de FERRIERES "Add an ant task to download the postgreSQL JDBC driver" (https://issues.apache.org/jira/browse/OFBIZ-3232) - OFBIZ-3232 This add a simple ant to download the postgreSQL JDBC driver, to simplify the installation of a database based on this engine Currently it works only for the last drivers available : postgresql-8.4-701.jdbc4.jar. But this may be easily adapted.
I have also added an svn ignore for postgresql-8.4-701.jdbc4.jar

git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@882502 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -119,7 +119,14 @@ under the License.
             <filelist dir="." files="framework/testtools/build.xml"/>
         </subant>
     </target>
-  
+
+    <target name="download-PG-JDBC"
+      description="Download the PostgreSQL JDBC driver file">
+        <subant target="install-PG-JDBC">
+            <filelist dir="." files="framework/entity/build.xml"/>
+        </subant>
+    </target>
+
     <target name="tests" depends="ofbiz-init">
         <subant target="tests">
             <filelist dir="." files="framework/build.xml"/>
