--- a/framework/entity/build.xml
+++ b/framework/entity/build.xml
@@ -53,6 +53,11 @@ under the License.
         <javac15/>
     </target>
 
+    <target name="install-PG-JDBC" description="download the JDBC driver for PostgreSQL">
+        <get src="http://jdbc.postgresql.org/download/postgresql-8.4-701.jdbc4.jar"
+            dest="lib/jdbc/postgresql-8.4-701.jdbc4.jar" usetimestamp="true" />
+    </target>
+
     <!-- ================================================================== -->
     <!-- Build JavaDoc                                                      -->
     <!-- ================================================================== -->
