Add an EncryptedString format possibilities in datafile (use in Record.java, needed some changes to build in framework/build.xml and datafile/build.xml) + datafile/dtd/datafiles.xsd enhanced with some documentations, and an enumeration for the type: I used all occurrences found in Record.setString() method) + datafile/dtd/datafiles-catalog.xml added + Few generics cleaning in login/LoginServices.java
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@882892 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/build.xml
+++ b/framework/build.xml
@@ -27,9 +27,9 @@ under the License.
                catalina/build.xml,jetty/build.xml,
                security/build.xml,service/build.xml,entityext/build.xml,
                webslinger/build.xml,
-               bi/build.xml,datafile/build.xml,minilang/build.xml,
+               bi/build.xml,minilang/build.xml,
                webapp/build.xml,guiapp/build.xml,widget/build.xml,
-               common/build.xml,
+               common/build.xml,datafile/build.xml,
                testtools/build.xml,
                appserver/build.xml,webtools/build.xml,example/build.xml"/>
 
