Throw a ContainerException if any tests are unsuccessful during a test run and have the run-tests target fail if that is the case
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@882995 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -433,7 +433,7 @@ under the License.
     </target>
     <target name="run-tests" depends="build" 
       description="Run OFBiz default tests">
-        <java jar="ofbiz.jar" fork="true">
+        <java jar="ofbiz.jar" fork="true" failonerror="true">
             <jvmarg value="${memory.initial.param}"/>
             <jvmarg value="${memory.max.param}"/>
             <jvmarg value="${memory.maxpermsize.param}"/>
