Not really forgotten in previsou commit (r883017) but was on ignore-on-commit Toirtoise changelist and anything in this list is not committed even if checked (lesson learned)
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@883019 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/common/config/general.properties
+++ b/framework/common/config/general.properties
@@ -53,6 +53,11 @@ locale.properties.fallback=en
 # -- the default country for drop downs
 country.geo.id.default=USA
 
+# -- Available countries, separated by commas.This property controls
+#    which countries the user can select from. If this property is not used,
+#    then the user will be able to select from all the countries.
+#countries.geo.id.available=USA
+
 # -- the default trackingCodeId to use for Partner Managed Tracking Codes
 partner.trackingCodeId.default=
 
