--- a/framework/common/config/general.properties
+++ b/framework/common/config/general.properties
@@ -29,8 +29,8 @@ ORGANIZATION_PARTY=Company
 # ID of the VisualTheme to use if there VISUAL_THEME UserPreference record for the current user supported values: FLAT_GREY and BIZZNESS_TIME and BLUELIGHT 
 VISUAL_THEME=BIZZNESS_TIME
 
-# -- the default decimal format for currency
-currency.decimal.format=##0.00
+# -- the default decimal format for currency (used in UtilFormatOut.java)
+currency.decimal.format=#,##0.00
 
 # -- Properties fallback locale. Change this setting with caution. If you
 #    start getting "resource not found" exceptions, then there are
