Reverting 884093 and 884091. Those targets are needed for the demo servers.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@884282 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -269,7 +269,7 @@ under the License.
     <!-- WebSite Targets                                                    -->
     <!-- ================================================================== -->
 
-    <!--target name="build-website" 
+    <target name="build-website" 
       description="For committers : Update dtds and JavaDoc from OFBiz intance to site">
         <antcall target="copy-dtds"/>
         <antcall target="docs"/>
@@ -290,7 +290,7 @@ under the License.
         <copy todir="${site.dir}/api/specialpurpose">
             <fileset dir="${basedir}/specialpurpose" includes="**/build/javadocs/**"/>
         </copy>
-    </target--><!-- deprecated -->
+    </target>
 
     <target name="copy-dtds"
       description="For committers : Copy all dtds from OFBiz instance to website">
