Shark compiles now.  Except that you have to add the libraries uploaded to https://issues.apache.org/jira/browse/OFBIZ-552.  Which you probably can't, as latest shark(2.0 or 2.5, couldn't really tell) is LGPL.  So we should probably remove this anyways.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@884347 13f79535-47bb-0310-9956-ffa450edef68

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ specialpurpose/oagis/build/
 specialpurpose/pos/build/
 specialpurpose/projectmgr/build/
 specialpurpose/webpos/build/
+specialpurpose/shark/build/
 ofbiz.jar
 changelog
 runtime/svninfo.ftl
