Ignore test results.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@884364 13f79535-47bb-0310-9956-ffa450edef68

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,7 @@ runtime/svninfo.ftl
 runtime/logs/access_log.*
 runtime/logs/*.log*
 runtime/logs/*.html*
+runtime/logs/test-results/*
 runtime/data/derby/*
 runtime/catalina/work/*
 debian/EncryptPassword.class
