Added bin to .git-ignore
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@886041 13f79535-47bb-0310-9956-ffa450edef68

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ applications/party/build/
 applications/product/build/
 applications/securityext/build/
 applications/workeffort/build/
+bin/
 framework/appserver/build/
 framework/base/build/
 framework/bi/build/
