--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,7 @@ specialpurpose/shark/build/
 ofbiz.jar
 changelog
 runtime/svninfo.ftl
+runtime/test-list-build.xml
 runtime/logs/access_log.*
 runtime/logs/*.log*
 runtime/logs/*.html*
