Add a target for per-component quick testing.  Can only deal with tests that can run standalone.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@888851 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/base/build.xml
+++ b/framework/base/build.xml
@@ -36,6 +36,10 @@ under the License.
         <fileset dir="../start/build/lib" includes="*.jar"/>
     </path>
 
+    <filelist id="test.classes" dir="${src.dir}">
+        <file name="org/ofbiz/base/test/BaseUnitTests.java"/>
+    </filelist>
+
     <!-- ================================================================== -->
     <!-- Compilation of the source files                                    -->
     <!-- ================================================================== -->
