--- a/framework/base/build.xml
+++ b/framework/base/build.xml
@@ -38,6 +38,7 @@ under the License.
 
     <filelist id="test.classes" dir="${src.dir}">
         <file name="org/ofbiz/base/test/BaseUnitTests.java"/>
+        <file name="org/ofbiz/base/util/collections/test/GenericMapTest.java"/>
     </filelist>
 
     <!-- ================================================================== -->
