--- a/.classpath
+++ b/.classpath
@@ -71,13 +71,13 @@
     <classpathentry kind="lib" path="framework/base/lib/j2eespecs/tomcat-6.0.16-jsp_2.1_spec.jar"/>
     <classpathentry kind="lib" path="framework/base/lib/j2eespecs/tomcat-6.0.16-servlet_2.5_spec.jar"/>
     <classpathentry kind="lib" path="framework/base/lib/scripting/antlr-2.7.6.jar"/>
-    <classpathentry kind="lib" path="framework/base/lib/scripting/asm-2.2.jar"/>
-    <classpathentry kind="lib" path="framework/base/lib/scripting/asm-analysis-2.2.jar"/>
-    <classpathentry kind="lib" path="framework/base/lib/scripting/asm-tree-2.2.jar"/>
-    <classpathentry kind="lib" path="framework/base/lib/scripting/asm-util-2.2.jar"/>
+    <classpathentry kind="lib" path="framework/base/lib/scripting/asm-3.2.jar"/>
+    <classpathentry kind="lib" path="framework/base/lib/scripting/asm-analysis-3.2.jar"/>
+    <classpathentry kind="lib" path="framework/base/lib/scripting/asm-tree-3.2.jar"/>
+    <classpathentry kind="lib" path="framework/base/lib/scripting/asm-util-3.2.jar"/>
     <classpathentry kind="lib" path="framework/base/lib/scripting/bsf-2.4.0.jar"/>
     <classpathentry kind="lib" path="framework/base/lib/scripting/bsh-2.0b4.jar"/>
-    <classpathentry kind="lib" path="framework/base/lib/scripting/groovy-1.6.0.jar"/>
+    <classpathentry kind="lib" path="framework/base/lib/scripting/groovy-1.7-rc-2.jar"/>
     <classpathentry kind="lib" path="framework/base/lib/scripting/jakarta-oro-2.0.8.jar"/>
     <classpathentry kind="lib" path="framework/base/lib/scripting/jython-nooro.jar"/>
     <classpathentry kind="lib" path="framework/catalina/lib/tomcat-6.0.16-catalina.jar"/>
@@ -117,27 +117,45 @@
     <classpathentry kind="lib" path="framework/webapp/lib/xmlrpc-client-3.0.jar"/>
     <classpathentry kind="lib" path="framework/webapp/lib/xmlrpc-common-3.0.jar"/>
     <classpathentry kind="lib" path="framework/webapp/lib/xmlrpc-server-3.0.jar"/>
-    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-20090630-3606-466aec2fb8ad.jar"/>
-    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-base-cache-20090630-3606-466aec2fb8ad.jar"/>
-    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-base-collections-20090630-3606-466aec2fb8ad.jar"/>
-    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-base-collections-arrays-20090630-3606-466aec2fb8ad.jar"/>
-    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-base-concurrent-20090630-3606-466aec2fb8ad.jar"/>
-    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-base-junit-20090630-3606-466aec2fb8ad.jar"/>
-    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-base-lang-20090630-3606-466aec2fb8ad.jar"/>
-    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-base-logging-20090630-3606-466aec2fb8ad.jar"/>
-    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-base-resolver-20090630-3606-466aec2fb8ad.jar"/>
-    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-catalina-20090630-3606-466aec2fb8ad.jar"/>
-    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-embryo-20090630-3606-466aec2fb8ad.jar"/>
-    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-extension-bsf-20090630-3606-466aec2fb8ad.jar"/>
-    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-extension-code-20090630-3606-466aec2fb8ad.jar"/>
-    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-extension-groovy-20090630-3606-466aec2fb8ad.jar"/>
-    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-extension-image-20090630-3606-466aec2fb8ad.jar"/>
-    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-extension-janino-20090630-3606-466aec2fb8ad.jar"/>
-    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-extension-servlet-20090630-3606-466aec2fb8ad.jar"/>
-    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-extension-template-20090630-3606-466aec2fb8ad.jar"/>
-    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-extension-velocity-20090630-3606-466aec2fb8ad.jar"/>
-    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-extension-wiki-20090630-3606-466aec2fb8ad.jar"/>
-    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-launcher-20090630-3606-466aec2fb8ad.jar"/>
+    <classpathentry kind="lib" path="framework/base/lib/webslinger-base-invoker-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-base-cache-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-base-collections-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-base-collections-arrays-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-base-concurrent-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-base-html-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-base-invoker-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-base-io-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-base-javacc-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-base-junit-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-base-lang-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-base-logging-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-base-resolver-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-base-util-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-base-xml-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-catalina-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-cgi-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-embryo-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-extension-beanshell-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-extension-bsf-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-extension-code-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-extension-commonsvfs-object-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-extension-directory-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-extension-freemarker-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-extension-groovy-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-extension-image-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-extension-janino-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-extension-jruby-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-extension-jython-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-extension-nutch-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-extension-plan9-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-extension-quercus-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-extension-rhino-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-extension-servlet-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-extension-template-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-extension-velocity-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-extension-wiki-20091211-3897-7ab22baea4b6.jar"/>
+    <classpathentry kind="lib" path="framework/webslinger/lib/webslinger-launcher-20091211-3897-7ab22baea4b6.jar"/>
     <classpathentry kind="lib" path="specialpurpose/googlecheckout/lib/checkout-sdk-0.8.8.jar"/>
     <classpathentry kind="lib" path="specialpurpose/ldap/lib/cas-server-core-3.3.jar"/>
     <classpathentry kind="lib" path="specialpurpose/pos/lib/jcl.jar"/>
