Instrumentation with cobertura.  It won't actually do anything, tho, until cobertura-1.9.3.jar is placed into framework/base/lib.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@889839 13f79535-47bb-0310-9956-ffa450edef68

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,8 @@ changelog
 runtime/svninfo.ftl
 runtime/test-list-build.xml
 runtime/logs/access_log.*
+runtime/logs/cobertura.dat
+runtime/logs/cobertura-report
 runtime/logs/*.log*
 runtime/logs/*.html*
 runtime/logs/test-results/*
